--- a/.github/BOTMETA.yml
+++ b/.github/BOTMETA.yml
@@ -332,9 +332,9 @@ files:
   $modules/clustering/consul_acl.py: sgargan
   $modules/clustering/consul_kv.py: sgargan
   $modules/clustering/consul_session.py: sgargan
-  $modules/clustering/k8s.py: chouseknecht sdoran maxamillion fabianvf flaper87
+  $modules/clustering/k8s: chouseknecht sdoran maxamillion fabianvf flaper87
   $modules/clustering/kubernetes.py: erjohnso supertom
-  $modules/clustering/openshift.py: chouseknecht sdoran maxamillion fabianvf flaper87
+  $modules/clustering/openshift: chouseknecht sdoran maxamillion fabianvf flaper87
   $modules/clustering/pacemaker_cluster.py:
   $modules/clustering/znode.py: treyperry
   $modules/commands/command.py: $team_ansible
