--- a/test/integration/targets/ucs_vsans/tasks/main.yml
+++ b/test/integration/targets/ucs_vsans/tasks/main.yml
@@ -13,19 +13,7 @@
     hostname: "{{ ucs_hostname }}"
     username: "{{ ucs_username }}"
     password: "{{ ucs_password }}"
-    vsan_list:
-      - name: vsan110
-        vsan_id: '110'
-        vlan_id: '110'
-      - name: vsan-A-111
-        vsan_id: '111'
-        vlan_id: '111'
-        fabric: A
-      - name: vsan-B-112
-        vsan_id: '112'
-        vlan_id: '112'
-        fabric: B
-        fc_zoning: enabled
+    name: vsan110
     state: absent
 
 
@@ -35,8 +23,9 @@
     hostname: "{{ ucs_hostname }}"
     username: "{{ ucs_username }}"
     password: "{{ ucs_password }}"
-    <<: *vsans_absent
-    state: present
+    name: vsan110
+    vsan_id: '110'
+    vlan_id: '110'
   check_mode: yes
   register: cm_vsans_present
 
@@ -72,19 +61,7 @@
 - name: VSANs VLAN change (check_mode)
   ucs_vsans: &vsans_change
     <<: *vsans_present
-    vsan_list:
-      - name: vsan110
-        vsan_id: '110'
-        vlan_id: '10'
-      - name: vsan-A-111
-        vsan_id: '111'
-        vlan_id: '111'
-        fabric: A
-      - name: vsan-B-112
-        vsan_id: '112'
-        vlan_id: '112'
-        fabric: B
-        fc_zoning: enabled    
+    vlan_id: '10'
   check_mode: yes
   register: cm_vsans_vlan_change
 
@@ -118,29 +95,27 @@
 
 # Teardown (clean environment)
 - name: VSANs absent (check_mode)
-  ucs_vsans: &vsans_change_absent
-    <<: *vsans_change
-    state: absent
+  ucs_vsans: *vsans_absent
   check_mode: yes
   register: cm_vsans_absent
 
 
 # Absent (normal mode)
 - name: VSANs absent (normal mode)
-  ucs_vsans: *vsans_change_absent
+  ucs_vsans: *vsans_absent
   register: nm_vsans_absent
 
 
 # Test absent again (idempotent)
 - name: VSANs absent again (check_mode)
-  ucs_vsans: *vsans_change_absent
+  ucs_vsans: *vsans_absent
   check_mode: yes
   register: cm_vsans_absent_again
 
 
 # Absent again (normal mode)
 - name: VSANs absent again (normal mode)
-  ucs_vsans: *vsans_change_absent
+  ucs_vsans: *vsans_absent
   register: nm_vsans_absent_again
 
 
