--- a/test/integration/targets/nxos_interface/tests/common/intent.yaml
+++ b/test/integration/targets/nxos_interface/tests/common/intent.yaml
@@ -1,10 +1,19 @@
 - debug: msg="START TRANSPORT:{{ connection.transport }} nxos_interface intent test"
 
-- set_fact: test_interface="{{ nxos_int2 }}"
+- set_fact: testint1="{{ nxos_int1 }}"
+- set_fact: testint2="{{ nxos_int2 }}"
+
+- name: "Setup: Put interfaces into a default state"
+  nxos_config:
+    lines:
+      - "default interface {{ testint1 }}"
+      - "default interface {{ testint2 }}"
+    provider: "{{ connection }}"
+  ignore_errors: yes
 
 - name: Check intent arguments
   nxos_interface:
-    name: "{{ test_interface }}"
+    name: "{{ testint2 }}"
     admin_state: up
     tx_rate: ge(0)
     rx_rate: ge(0)
@@ -17,7 +26,7 @@
 
 - name: Check intent arguments (failed condition)
   nxos_interface:
-    name: "{{ test_interface }}"
+    name: "{{ testint2 }}"
     admin_state: down
     tx_rate: gt(0)
     rx_rate: lt(0)
@@ -30,5 +39,25 @@
       - "result.failed == true"
       - "'tx_rate gt(0)' in result.failed_conditions"
       - "'rx_rate lt(0)' in result.failed_conditions"
+
+- name: aggregate definition of interface
+  nxos_interface:
+    aggregate:
+      - { name: "{{ testint1 }}", description: "Test aggregation on first interface" }
+      - { name: "{{ testint2 }}", mode: layer3 }
+    provider: "{{ connection }}"
+  register: result
+
+- assert:
+    that:
+      - "result.changed == true"
+
+- name: "TearDown: Put interfaces into a default state"
+  nxos_config:
+    lines:
+      - "default interface {{ testint1 }}"
+      - "default interface {{ testint2 }}"
+    provider: "{{ connection }}"
+  ignore_errors: yes
 
 - debug: msg="END TRANSPORT:{{ connection.transport }} nxos_interface intent test"
