Run all tests via run.sh, improve conditional tests, add never tag
Add never tag to certain failining tests and explicitly skip it for now until #34104 is merged. Some tasks need to remain commented out because they cause the entire play to fail and aren't skippable by tags because they are syntax and/or variable checks.

Improve test for whether or not a role was run based on a conditional. Since the [import|include]_role does not register a variable, use a variable that is set inside a role as a canary test for whether or not the role was run.

--- a/test/integration/targets/include_import/playbook/dir/playbook_in_subdir.yml
+++ b/test/integration/targets/include_import/playbook/dir/playbook_in_subdir.yml
@@ -8,4 +8,5 @@
         that:
           - group_var1 == 'set in group_vars/all.yml'
           - group_var2 == 'set in dir/group_vars/all.yml'
-      ignore_errors: yes
+      tags:
+        - never
