--- a/test/integration/targets/include_import/role/test_import_role.yml
+++ b/test/integration/targets/include_import/role/test_import_role.yml
@@ -25,27 +25,28 @@
     - name: Test conditional role include
       import_role:
         name: role1
+        tasks_from: canary1.yml
       when: run_role
-      register: _conditional_check
 
-    # - name: Assert that role ran
-    #   assert:
-    #     that:
-    #       - _conditional_check is not skipped
+    - name: Assert that role ran
+      assert:
+        that:
+          - role1_canary1 == 'r1c1'
 
     - name: Test conditional role import that should be skipped
       import_role:
         name: role1
+        tasks_from: canary2.yml
       when: do_not_run_role
-      register: _conditional_check
 
-    # - name: Assert that role ran
-    #   assert:
-    #     that:
-    #       - _conditional_check is skipped
+    - name: Assert that role did not run
+      assert:
+        that:
+          - role1_canary2 is not defined
 
     # FIXME We expect this to fail, but I'm not sure how best to test for
     # syntax level failures.
+    #
     # - name: Test role import with a loop
     #   import_role:
     #     name: "{{ item }}"
@@ -69,6 +70,7 @@
 
     # FIXME Setting private: no in previous task does not make the variables
     # available to the play
+    #
     - name: Assert that variables defined in previous task are available to play
       assert:
         that:
@@ -81,8 +83,9 @@
       import_role:
         name: "{{ role_name }}"
 
-    # FIXME Trying to use a host_var here causes nothing to run because the
-    # variable is undefined.
+    # FIXME Trying to use a host_var here causes play execution to fail because
+    # the variable is undefined.
+    #
     # - name: Test using a host variable for role name
     #   import_role:
     #     name: "{{ host_var_role_name }}"
@@ -94,7 +97,8 @@
       vars:
         where_am_i_defined: in the task
 
-    ## FIXME Currently failing
+    # FIXME Currently failing
+    #
     # - name: Pass all variables in a variable to role
     #   import_role:
     #     name: role1
@@ -108,11 +112,14 @@
       vars:
         where_am_i_defined: "{{ test_var }}"
 
-    ## FIXME This fails with the following error:
-    ## The module {u'import_role': {u'name': u'role1'}} was not found in configured module paths.
-    # - name: Include an entire task
-    #   action:
-    #     module: "{{ entire_task }}"
+    # FIXME This fails with the following error:
+    # The module {u'import_role': {u'name': u'role1'}} was not found in configured module paths.
+    #
+    - name: Include an entire task
+      action:
+        module: "{{ entire_task }}"
+      tags:
+        - never
 
     - block:
         - name: Include a role that will fail
@@ -126,7 +133,6 @@
             name: role2
 
       always:
-        # Looks like this runs role1, role2, and role3. No idea why.
         - name: Include role inside always
           import_role:
             name: role3
