--- a/test/integration/targets/win_module_utils/tasks/main.yml
+++ b/test/integration/targets/win_module_utils/tasks/main.yml
@@ -97,3 +97,12 @@
 - assert:
     that:
     - file_util_test.data == 'success'
+
+- name: call module with FileUtil tests for Ansible.IO c# code
+  file_util_test_max_path:
+    path: C:\ansible testing
+  register: file_util_test
+
+- assert:
+    that:
+    - file_util_test.data == 'success'
