--- a/test/integration/targets/include_import/roles/role1/tasks/fail.yml
+++ b/test/integration/targets/include_import/roles/role1/tasks/fail.yml
@@ -1,2 +1,3 @@
-- name: This command should always fail
-  command: foobar
+- name: EXPECTED FAILURE
+  fail:
+    msg: This command should always fail
