--- a/test/integration/targets/filesystem/tasks/setup.yml
+++ b/test/integration/targets/filesystem/tasks/setup.yml
@@ -13,13 +13,13 @@
     package:
       name: btrfs-progs
       state: present
-    when: ansible_os_family != 'Suse' and not (ansible_distribution == 'Ubuntu' and ansible_distribution_version|version_compare('16.04', '<='))
+    when: ansible_os_family != 'Suse' and not (ansible_distribution == 'Ubuntu' and ansible_distribution_version is version('16.04', '<='))
 
   - name: install btrfs progs (Ubuntu <= 16.04)
     package:
       name: btrfs-tools
       state: present
-    when: ansible_distribution == 'Ubuntu' and ansible_distribution_version|version_compare('16.04', '<=')
+    when: ansible_distribution == 'Ubuntu' and ansible_distribution_version is version('16.04', '<=')
 
   - name: install btrfs progs (OpenSuse)
     package:
@@ -42,4 +42,4 @@
     # http://e2fsprogs.sourceforge.net/e2fsprogs-release.html#1.43
     # Mke2fs no longer complains if the user tries to create a file system
     # using the entire block device.
-    force_creation: "{{ e2fsprogs_version | version_compare('1.43', '<') }}"
+    force_creation: "{{ e2fsprogs_version is version('1.43', '<') }}"
