--- a/test/integration/targets/firewalld/tasks/main.yml
+++ b/test/integration/targets/firewalld/tasks/main.yml
@@ -24,8 +24,8 @@
         state: installed
       # This doesn't work for CentOS 6 because firewalld doesn't exist in CentOS6
 
-    # Check to make sure the firewalld python module is available.
-    - shell: "{{ansible_python.executable}} -c 'import firewall'"
+    - name: Check to make sure the firewalld python module is available.
+      shell: "{{ansible_python.executable}} -c 'import firewall'"
       register: check_output
       ignore_errors: true
 
