don't use filters for tests
Signed-off-by: Adam Miller <admiller@redhat.com>

--- a/test/integration/targets/firewalld/tasks/port_test_cases.yml
+++ b/test/integration/targets/firewalld/tasks/port_test_cases.yml
@@ -26,7 +26,7 @@
 - name: assert firewalld port test permanent enabled worked
   assert:
     that:
-    - result|changed
+    - result is changed
 
 - name: firewalld port test permanent enabled rerun (verify not changed)
   firewalld:
@@ -38,7 +38,7 @@
 - name: assert firewalld port test permanent enabled rerun worked (verify not changed)
   assert:
     that:
-    - not result|changed
+    - result is not changed
 
 - name: firewalld port test permanent disabled
   firewalld:
@@ -50,7 +50,7 @@
 - name: assert firewalld port test permanent disabled worked
   assert:
     that:
-    - result|changed
+    - result is changed
 
 - name: firewalld port test permanent disabled rerun (verify not changed)
   firewalld:
@@ -62,4 +62,4 @@
 - name: assert firewalld port test permanent disabled rerun worked (verify not changed)
   assert:
     that:
-    - not result|changed
+    - result is not changed
