--- a/test/integration/targets/nxos_bgp_neighbor/tests/common/sanity.yaml
+++ b/test/integration/targets/nxos_bgp_neighbor/tests/common/sanity.yaml
@@ -1,5 +1,7 @@
 ---
 - debug: msg="START TRANSPORT:{{ connection.transport}} nxos_bgp_neighbor sanity test"
+- debug: msg="Using provider={{ connection.transport }}"
+  when: ansible_connection == "local"
 
 - set_fact: intname="{{ nxos_int1 }}"
 
