--- a/test/integration/targets/nxos_bgp_neighbor/tests/common/sanity.yaml
+++ b/test/integration/targets/nxos_bgp_neighbor/tests/common/sanity.yaml
@@ -1,5 +1,5 @@
 ---
-- debug: msg="START TRANSPORT:{{ connection.transport}} nxos_bgp_neighbor sanity test"
+- debug: msg="START connection={{ ansible_connection }} nxos_bgp_neighbor sanity test"
 - debug: msg="Using provider={{ connection.transport }}"
   when: ansible_connection == "local"
 
@@ -202,4 +202,4 @@
       state: disabled
       provider: "{{ connection }}"
 
-- debug: msg="END TRANSPORT:{{ connection.transport}} nxos_bgp_neighbor sanity test"
+- debug: msg="END connection={{ ansible_connection }} nxos_bgp_neighbor sanity test"
