Import tag tests
Fix bug it tests where validate tasks weren't run on tag tests.
Add tests for task import/include with tags.

--- a/test/integration/targets/include_import/role/test_import_role.yml
+++ b/test/integration/targets/include_import/role/test_import_role.yml
@@ -97,8 +97,8 @@
       vars:
         where_am_i_defined: in the task
 
-    # FIXME Currently failing
-    #
+    ## FIXME Currently failing
+    ## ERROR! Vars in a IncludeRole must be specified as a dictionary, or a list of dictionaries
     # - name: Pass all variables in a variable to role
     #   import_role:
     #     name: role1
