--- a/test/integration/targets/include_import/role/test_include_role.yml
+++ b/test/integration/targets/include_import/role/test_include_role.yml
@@ -90,7 +90,8 @@
       vars:
         where_am_i_defined: in the task
 
-    ## FIXME Currently failing
+    ## FIXME Currently failing with
+    ## ERROR! Vars in a IncludeRole must be specified as a dictionary, or a list of dictionaries
     # - name: Pass all variables in a variable to role
     #   include_role:
     #     name: role1
