--- a/test/integration/targets/cs_network_offering/tasks/main.yml
+++ b/test/integration/targets/cs_network_offering/tasks/main.yml
@@ -35,10 +35,10 @@
     name: "{{ cs_resource_prefix }}_name"
     display_text: "network offering description"
     guest_ip_type: Isolated
-    supported_services: Dns,PortForwarding,Dhcp,SourceNat,UserData,Firewall,StaticNat,Vpn,Lb
     service_provider_list:
       - {service: 'dns', provider: 'virtualrouter'}
       - {service: 'dhcp', provider: 'virtualrouter'}
+    supported_services: [ Dns, PortForwarding, Dhcp, SourceNat, UserData, Firewall, StaticNat, Vpn, Lb ]
   register: netoffer
   check_mode: yes
 - name: verify results of network offer in check mode
@@ -52,10 +52,10 @@
     name: "{{ cs_resource_prefix }}_name"
     display_text: "network offering description"
     guest_ip_type: Isolated
-    supported_services: Dns,PortForwarding,Dhcp,SourceNat,UserData,Firewall,StaticNat,Vpn,Lb
     service_provider_list:
       - {service: 'dns', provider: 'virtualrouter'}
       - {service: 'dhcp', provider: 'virtualrouter'}
+    supported_services: [ Dns, PortForwarding, Dhcp, SourceNat, UserData, Firewall, StaticNat, Vpn, Lb ]
   register: netoffer
 - name: verify results of network offer
   assert:
@@ -72,10 +72,10 @@
     name: "{{ cs_resource_prefix }}_name"
     display_text: "network offering description"
     guest_ip_type: Isolated
-    supported_services: Dns,PortForwarding,Dhcp,SourceNat,UserData,Firewall,StaticNat,Vpn,Lb
     service_provider_list:
       - {service: 'dns', provider: 'virtualrouter'}
       - {service: 'dhcp', provider: 'virtualrouter'}
+    supported_services: [ Dns, PortForwarding, Dhcp, SourceNat, UserData, Firewall, StaticNat, Vpn, Lb ]
   register: netoffer
 - name: verify results of create network offer idempotence
   assert:
@@ -87,19 +87,13 @@
     - netoffer.state == "Disabled"
     - netoffer.display_text == "network offering description"
 
-- name: test enabling network offer in check_mode
+- name: test enabling existing network offer in check_mode
   cs_network_offering:
     name: "{{ cs_resource_prefix }}_name"
-    display_text: "network offering description"
-    guest_ip_type: Isolated
-    supported_services: Dns,PortForwarding,Dhcp,SourceNat,UserData,Firewall,StaticNat,Vpn,Lb
-    service_provider_list:
-      - {service: 'dns', provider: 'virtualrouter'}
-      - {service: 'dhcp', provider: 'virtualrouter'}
     state: enabled
   register: netoffer
   check_mode: yes
-- name: verify results of enabling network offer in check_mode
+- name: verify results of enabling existing network offer in check_mode
   assert:
     that:
     - netoffer is successful
@@ -109,18 +103,12 @@
     - netoffer.state == "Disabled"
     - netoffer.display_text == "network offering description"
 
-- name: test enabling network offer
+- name: test enabling existing network offer
   cs_network_offering:
     name: "{{ cs_resource_prefix }}_name"
-    display_text: "network offering description"
-    guest_ip_type: Isolated
-    supported_services: Dns,PortForwarding,Dhcp,SourceNat,UserData,Firewall,StaticNat,Vpn,Lb
-    service_provider_list:
-      - {service: 'dns', provider: 'virtualrouter'}
-      - {service: 'dhcp', provider: 'virtualrouter'}
     state: enabled
   register: netoffer
-- name: verify results of enabling network offer
+- name: verify results of enabling existing network offer
   assert:
     that:
     - netoffer is successful
@@ -130,18 +118,12 @@
     - netoffer.state == "Enabled"
     - netoffer.display_text == "network offering description"
 
-- name: test enabling network offer idempotence
+- name: test enabling existing network offer idempotence
   cs_network_offering:
     name: "{{ cs_resource_prefix }}_name"
-    display_text: "network offering description"
-    guest_ip_type: Isolated
-    supported_services: Dns,PortForwarding,Dhcp,SourceNat,UserData,Firewall,StaticNat,Vpn,Lb
-    service_provider_list:
-      - {service: 'dns', provider: 'virtualrouter'}
-      - {service: 'dhcp', provider: 'virtualrouter'}
     state: enabled
   register: netoffer
-- name: verify results of enabling network idempotence
+- name: verify results of enabling existing network idempotence
   assert:
     that:
     - netoffer is successful
@@ -156,10 +138,10 @@
     name: "{{ cs_resource_prefix }}_name"
     display_text: "network offering description"
     guest_ip_type: Isolated
-    supported_services: Dns,PortForwarding,Dhcp,SourceNat,UserData,Firewall,StaticNat,Vpn,Lb
     service_provider_list:
       - {service: 'dns', provider: 'virtualrouter'}
       - {service: 'dhcp', provider: 'virtualrouter'}
+    supported_services: [ Dns, PortForwarding, Dhcp, SourceNat, UserData, Firewall, StaticNat, Vpn, Lb ]
     state: disabled
   register: netoffer
   check_mode: yes
@@ -178,10 +160,10 @@
     name: "{{ cs_resource_prefix }}_name"
     display_text: "network offering description"
     guest_ip_type: Isolated
-    supported_services: Dns,PortForwarding,Dhcp,SourceNat,UserData,Firewall,StaticNat,Vpn,Lb
     service_provider_list:
       - {service: 'dns', provider: 'virtualrouter'}
       - {service: 'dhcp', provider: 'virtualrouter'}
+    supported_services: [ Dns, PortForwarding, Dhcp, SourceNat, UserData, Firewall, StaticNat, Vpn, Lb ]
     state: disabled
   register: netoffer
 - name: verify results of disabling network offer
@@ -199,10 +181,10 @@
     name: "{{ cs_resource_prefix }}_name"
     display_text: "network offering description"
     guest_ip_type: Isolated
-    supported_services: Dns,PortForwarding,Dhcp,SourceNat,UserData,Firewall,StaticNat,Vpn,Lb
     service_provider_list:
       - {service: 'dns', provider: 'virtualrouter'}
       - {service: 'dhcp', provider: 'virtualrouter'}
+    supported_services: [ Dns, PortForwarding, Dhcp, SourceNat, UserData, Firewall, StaticNat, Vpn, Lb ]
     state: disabled
   register: netoffer
 - name: verify results of disabling network idempotence
@@ -220,10 +202,10 @@
     name: "{{ cs_resource_prefix }}_name"
     display_text: "network offering description renamed"
     guest_ip_type: Isolated
-    supported_services: Dns,PortForwarding,Dhcp,SourceNat,UserData,Firewall,StaticNat,Vpn,Lb
     service_provider_list:
       - {service: 'dns', provider: 'virtualrouter'}
       - {service: 'dhcp', provider: 'virtualrouter'}
+    supported_services: [ Dns, PortForwarding, Dhcp, SourceNat, UserData, Firewall, StaticNat, Vpn, Lb ]
     state: disabled
   register: netoffer
   check_mode: yes
@@ -242,10 +224,10 @@
     name: "{{ cs_resource_prefix }}_name"
     display_text: "network offering description renamed"
     guest_ip_type: Isolated
-    supported_services: Dns,PortForwarding,Dhcp,SourceNat,UserData,Firewall,StaticNat,Vpn,Lb
     service_provider_list:
       - {service: 'dns', provider: 'virtualrouter'}
       - {service: 'dhcp', provider: 'virtualrouter'}
+    supported_services: [ Dns, PortForwarding, Dhcp, SourceNat, UserData, Firewall, StaticNat, Vpn, Lb ]
     state: disabled
   register: netoffer
 - name: verify results of rename network offer
@@ -263,10 +245,10 @@
     name: "{{ cs_resource_prefix }}_name"
     display_text: "network offering description renamed"
     guest_ip_type: Isolated
-    supported_services: Dns,PortForwarding,Dhcp,SourceNat,UserData,Firewall,StaticNat,Vpn,Lb
     service_provider_list:
       - {service: 'dns', provider: 'virtualrouter'}
       - {service: 'dhcp', provider: 'virtualrouter'}
+    supported_services: [ Dns, PortForwarding, Dhcp, SourceNat, UserData, Firewall, StaticNat, Vpn, Lb ]
     state: disabled
   register: netoffer
 - name: verify results of rename network offer idempotence
@@ -372,10 +354,10 @@
     name: "{{ cs_resource_prefix }}_name"
     display_text: "network offering description"
     guest_ip_type: Isolated
-    supported_services: Dns,PortForwarding,Dhcp,SourceNat,UserData,Firewall,StaticNat,Vpn,Lb
     service_provider_list:
       - {service: 'dns', provider: 'virtualrouter'}
       - {service: 'dhcp', provider: 'virtualrouter'}
+    supported_services: [ Dns, PortForwarding, Dhcp, SourceNat, UserData, Firewall, StaticNat, Vpn, Lb ]
     state: enabled
   register: netoffer
   check_mode: yes
@@ -390,10 +372,10 @@
     name: "{{ cs_resource_prefix }}_name"
     display_text: "network offering description"
     guest_ip_type: Isolated
-    supported_services: Dns,PortForwarding,Dhcp,SourceNat,UserData,Firewall,StaticNat,Vpn,Lb
     service_provider_list:
       - {service: 'dns', provider: 'virtualrouter'}
       - {service: 'dhcp', provider: 'virtualrouter'}
+    supported_services: [ Dns, PortForwarding, Dhcp, SourceNat, UserData, Firewall, StaticNat, Vpn, Lb ]
     state: enabled
   register: netoffer
 - name: verify results of create enabled network offer
@@ -411,10 +393,10 @@
     name: "{{ cs_resource_prefix }}_name"
     display_text: "network offering description"
     guest_ip_type: Isolated
-    supported_services: Dns,PortForwarding,Dhcp,SourceNat,UserData,Firewall,StaticNat,Vpn,Lb
     service_provider_list:
       - {service: 'dns', provider: 'virtualrouter'}
       - {service: 'dhcp', provider: 'virtualrouter'}
+    supported_services: [ Dns, PortForwarding, Dhcp, SourceNat, UserData, Firewall, StaticNat, Vpn, Lb ]
     state: enabled
   register: netoffer
 - name: verify results of create enabled network offer idempotence
