update LinkUtil to work with long paths and add more tests

--- a/test/integration/targets/win_module_utils_legacy/tasks/main.yml
+++ b/test/integration/targets/win_module_utils_legacy/tasks/main.yml
@@ -19,7 +19,10 @@
   - path: C:\Windows
   - path: HKLM:\Software
   - path: '{{ bogus_driveletter.stdout_lines[0] }}:\goodpath'
+  - path: \\?\C:\long_path
   - path: '{{ bogus_driveletter.stdout_lines[0] }}:\badpath*%@:\blar'
+    should_fail: true
+  - path: \\?\{{ bogus_driveletter.stdout_lines[0] }}:\badpath*%@:\blar
     should_fail: true
 
 - name: test list parameters
