Revert "Merge branch 'a2.4' into stable-2.4"
This reverts commit e335c0b28102c88e4db5128ce4c5e6fd5f93e0fb, reversing
changes made to 6801223bbb4cf7a8973102e72f8ba7c345af5095.

--- a/test/integration/targets/win_group_membership/tasks/main.yml
+++ b/test/integration/targets/win_group_membership/tasks/main.yml
@@ -15,13 +15,13 @@
   block:
 
   - name: Test in normal mode
-    import_tasks: tests.yml
+    include_tasks: tests.yml
     vars:
       win_local_group: WinGroupMembershipTest
       in_check_mode: no
 
   - name: Test in check-mode
-    import_tasks: tests.yml
+    include_tasks: tests.yml
     vars:
       win_local_group: WinGroupMembershipTest
       in_check_mode: yes
