--- a/test/integration/targets/iso_extract/tasks/main.yml
+++ b/test/integration/targets/iso_extract/tasks/main.yml
@@ -35,7 +35,7 @@
   include_tasks: prepare.yml
 
 - name: Test in check-mode
-  import_tasks: tests.yml
+  include_tasks: tests.yml
   vars:
     in_check_mode: yes
   check_mode: yes
