--- a/test/integration/targets/win_eventlog_entry/tasks/main.yml
+++ b/test/integration/targets/win_eventlog_entry/tasks/main.yml
@@ -16,12 +16,12 @@
   block:
 
   - name: Test in normal mode
-    import_tasks: tests.yml
+    include_tasks: tests.yml
     vars:
       in_check_mode: no
 
   - name: Test in check-mode
-    import_tasks: tests.yml
+    include_tasks: tests.yml
     vars:
       in_check_mode: yes
     check_mode: yes
