--- a/test/integration/targets/win_firewall/tasks/main.yml
+++ b/test/integration/targets/win_firewall/tasks/main.yml
@@ -25,13 +25,13 @@
 
 
   - name: Test in normal mode
-    import_tasks: tests.yml
+    include: tests.yml
     vars:
       in_check_mode: no
 
 
   - name: Test in check-mode
-    import_tasks: tests.yml
+    include: tests.yml
     vars:
       in_check_mode: yes
     check_mode: yes
