--- a/test/integration/targets/win_timezone/tasks/main.yml
+++ b/test/integration/targets/win_timezone/tasks/main.yml
@@ -8,12 +8,12 @@
   block:
 
   - name: Test in normal mode
-    import_tasks: tests.yml
+    include: tests.yml
     vars:
       in_check_mode: no
 
   - name: Test in check-mode
-    import_tasks: tests.yml
+    include: tests.yml
     vars:
       in_check_mode: yes
     check_mode: yes
