--- a/test/integration/targets/win_unzip/tasks/main.yml
+++ b/test/integration/targets/win_unzip/tasks/main.yml
@@ -1,16 +1,16 @@
 - name: Clean slate
-  import_tasks: clean.yml
+  include: clean.yml
 
 - name: Test in normal mode
-  import_tasks: tests.yml
+  include: tests.yml
   vars:
     in_check_mode: no
 
 - name: Clean slate
-  import_tasks: clean.yml
+  include: clean.yml
 
 - name: Test in check-mode
-  import_tasks: tests.yml
+  include: tests.yml
   vars:
     in_check_mode: yes
   check_mode: yes
